# mau-engine

./: .clang-format  .gitignore  .gitmodules  2  CMakeLists.txt  README.md  clang-format.txt  format.sh
cmake/: FindOptiX.cmake  FindShaderc.cmake
engine/: CMakeLists.txt
engine/assets/shaders/: basic_fragment.glsl  basic_vertex.glsl
engine/assets/shaders/common/: limits.glsl  random.glsl  rt_types.glsl
engine/assets/shaders/rt/: basic.rchit  basic.rgen  basic.rmiss
engine/include/engine/: assert.h  engine-config.h  engine.h  enums.h  exceptions.h  log.h  memory.h  profiler.h  types.h  window.h
engine/include/engine/core/: layers.h
engine/include/engine/events/: event.h  key-events.h  mouse-events.h  window-events.h
engine/include/engine/input/: input.h  keycodes.h  mousecodes.h
engine/include/engine/scene/: components.h  entity.h  scene.h
engine/include/engine/utils/: handle.h  singleton.h
engine/src/: engine.cpp  window.cpp
engine/src/context/: imgui-context.cpp  imgui-context.h
engine/src/core/: layer.cpp
engine/src/graphics/: common.h  vulkan-bindless.cpp  vulkan-bindless.h  vulkan-buffers.cpp  vulkan-buffers.h  vulkan-commands.cpp  vulkan-commands.h  vulkan-device.cpp  vulkan-device.h  vulkan-features.h  vulkan-image.cpp  vulkan-image.h  vulkan-pipeline.cpp  vulkan-pipeline.h  vulkan-push-constant.cpp  vulkan-push-constant.h  vulkan-queue.cpp  vulkan-queue.h  vulkan-renderpass.cpp  vulkan-renderpass.h  vulkan-shaders.cpp  vulkan-shaders.h  vulkan-state.cpp  vulkan-state.h  vulkan-swapchain.cpp  vulkan-swapchain.h  vulkan-sync.cpp  vulkan-sync.h
engine/src/input/: input.cpp
engine/src/loader/: image-loader.cpp  image-loader.h
engine/src/optix/: denoiser.cpp  denoiser.h
engine/src/renderer/: imgui-renderer.cpp  imgui-renderer.h  imgui_renderer.cpp  imgui_renderer.h  renderer.cpp  renderer.h
engine/src/renderer/rendergraph/: graph.cpp  graph.h  pass.cpp  pass.h  resources.h  sink.cpp  sink.h  source.cpp  source.h
engine/src/renderer/rendergraph/passes/: imgui-pass.cpp  imgui-pass.h  lambertian-pass.cpp  lambertian-pass.h
engine/src/scene/: camera.cpp  camera.h  internal-components.h  material.cpp  material.h  mesh.cpp  mesh.h  scene.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
